@@ -1,0 +1,8 @@
+﻿"First tests for Behavior"
+
+Behavior subclass: #NewBehavior.
+!
+
+NewBehavior compile: 'myself ^self.'.
+!
+
